# whitespace-rs

./: .gitignore  Cargo.toml  Justfile  README.md  get-coverage.sh  version.json5
cli/: Cargo.toml
ender/: Cargo.toml
ender/src/: main.rs  main_tests.rs
lib/: Cargo.toml
lib/src/: ender.rs  ender_tests.rs  spacer.rs
spacer/: Cargo.toml
spacer/src/: main.rs  main_tests.rs
src/: ender.rs  ender_tests.rs  lib.rs  main.rs  main_tests.rs  spacer.rs  spacer_tests.rs
