[package]
name = "whitespace-rs"
version = "3.0.0"
edition = "2018"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]

readme = "README.md"
description = "Tools for fixing whitespace problems in text and source code files"
repository = "https://github.com/jlyonsmith/whitespace-rs"

keywords = ["whitespace"]
categories = ["command-line-utilities", "development-tools"]

license = "Unlicense"

[features]
default = ["cli"]
cli = ["clap"]
clap = ["dep:clap"]

[dependencies]
clap = { version = "^4.5.42", optional = true, features = ["derive"] }
utf8-decode = "^1.0"

[dev-dependencies]
tempfile = "^3.20"

[lib]
name = "whitespace_rs"
path = "src/lib.rs"

[[bin]]
name = "ender"
path = "src/bin/ender.rs"
required-features = ["cli"]

[[bin]]
name = "spacer"
path = "src/bin/spacer.rs"
required-features = ["cli"]
